@@ -16,7 +16,7 @@
 // along with DOLFIN. If not, see <http://www.gnu.org/licenses/>.
 //
 // First added:  2009-09-28
-// Last changed: 2011-07-18
+// Last changed: 2011-08-15
 
 #ifndef __EXPRESSION_H
 #define __EXPRESSION_H
@@ -97,7 +97,8 @@ namespace dolfin
     ///         The coordinates of the point.
     ///     cell (ufc::cell)
     ///         The cell which contains the given point.
-    virtual void eval(Array<double>& values, const Array<double>& x,
+    virtual void eval(Array<double>& values,
+                      const Array<double>& x,
                       const ufc::cell& cell) const;
 
     /// Evaluate at given point.
