@@ -1,3 +1,4 @@
+ - Get FacetArea working again
 1.0-beta [2011-08-11]
  - Print percentage of non-zero entries when computing sparsity patterns
  - Use ufl.Real for Constant in Python interface
@@ -15,7 +16,8 @@
  - Add new classes Linear/NonlinearVariationalProblem
  - Add new classes Linear/NonlinearVariationalSolver
  - Ad form class aliases ResidualForm and Jacobian form in wrapper code
- - Default argument to variables in Expression are passed as kwargs in the Python interface
+ - Default argument to variables in Expression are passed as kwargs in the
+   Python interface
  - Add has_openmp as utility function in Python interface
  - Add improved error reporting using dolfin_error
  - Use Boost to compute Legendre polynolials
@@ -23,7 +25,8 @@
  - Handle parsing of unrecognized command-line parameters
  - All const std::vector<foo>& now return a read-only NumPy array
  - Make a robust macro for generating a NumPy array from data
- - Exposing low level fem functionality to Python, by adding a Cell -> ufc::cell typemap
+ - Exposing low level fem functionality to Python, by adding a
+   Cell -> ufc::cell typemap
  - Added ufl_cell as a method to Mesh in Python interface
  - Fix memory leak in Zoltan interface
  - Remove some 'new' for arrays in favour of std::vector
